--- a/src/pages/Main/LeftTextBlock/LeftTextBlock.module.scss
+++ b/src/pages/Main/LeftTextBlock/LeftTextBlock.module.scss
@@ -3,21 +3,23 @@
 .leftTextBlock {
     display: flex;
     margin-top: 69px;
+    min-width: 743px;
+    max-width: 950px;
+    padding-left: 60px;
+    padding-right: 18px;
     position: relative;
     z-index: 1;
 }
 
+
 .leftText {
-    width: 743px;
+    width: auto;
     color: #000;
     font-family: 'FerryBlack', sans-serif;
     font-size: 60px;
-    padding-left: 60px;
-    padding-right: 18px;
     font-style: normal;
     font-weight: 900;
     line-height: normal;
     letter-spacing: 0.6px;
-
 }
 
