--- a/src/pages/Main/MainPage.module.scss
+++ b/src/pages/Main/MainPage.module.scss
@@ -2,7 +2,7 @@
 
 .mainPage {
     display: flex;
-    flex-direction: column; /* Устанавливаем направление flex-контейнера на вертикальное */
+    flex-direction: column;
     justify-content: flex-start;
     width: 1440px;
     height: 2867px;
