--- a/src/components/AppHeader/AppHeader.module.scss
+++ b/src/components/AppHeader/AppHeader.module.scss
@@ -1,4 +1,4 @@
-/* AppHeader.module.css */
+/* AppHeader.module.scss */
 
 .header {
     width: 1440px;
@@ -29,6 +29,7 @@
 .content {
     @include textStyles;
     display: flex;
+    position: relative;
     justify-content: space-between;
     align-items: center;
     padding-left: 60px;
