--- a/src/pages/Main/TitleTextBlock/TitleTextBlock-01.module.scss
+++ b/src/pages/Main/TitleTextBlock/TitleTextBlock-01.module.scss
@@ -1,6 +1,6 @@
+// TitleTextBlock-01.module.scss
 .titleTextBlock {
   width: 743px;
-
   color: #000;
   font-family: 'FerryBlack', sans-serif;
   font-size: 45px;
