--- a/src/pages/Main/TitleTextBlock-02/TitleTextBlock-02.module.scss
+++ b/src/pages/Main/TitleTextBlock-02/TitleTextBlock-02.module.scss
@@ -1,4 +1,4 @@
-// TitleTextBlock-02.module.scss
+
 .titleTextBlock {
   color: #000;
   font-family: 'FerryBlack', sans-serif;
@@ -7,4 +7,7 @@
   font-weight: 900;
   line-height: normal;
   letter-spacing: 0.45px;
+  margin-left: 60px;
+  margin-top: 90px;
+  margin-bottom: 60px;
 }
