--- a/src/pages/Main/LeftTextBlock/LeftTextBlock.module.scss
+++ b/src/pages/Main/LeftTextBlock/LeftTextBlock.module.scss
@@ -6,8 +6,8 @@
     min-width: 743px;
     max-width: 950px;
     padding-left: 60px;
-    padding-right: 18px;
     position: relative;
+    right: -5px;
     z-index: 1;
 }
 
