MainPage.jsx карточки стили

--- a/src/pages/LoginPage/LoginPage.module.scss
+++ b/src/pages/LoginPage/LoginPage.module.scss
@@ -10,18 +10,15 @@
   background: #FFF;
 }
 
-//.leftCharacters {
-//  margin-left: 141px;
-//  margin-right: 947px;
-//}
-
-//.rightColumn {
-//  margin-top: 67px;
-//  margin-right: 511px;
-//  margin-left: -296px;
-//}
-
-//.leftColumn {
-//  margin-left: 60px;
-//  margin-right: 60px;
+//.tariffCard {
+//  display: flex;
+//  flex-direction: column;
+//  align-items: flex-start;
+//  padding: 0;
+//  gap: 10px;
+//  position: absolute;
+//  width: 341px;
+//  height: 410px;
+//  left: 30px;
+//  top: 457px;
 //}
