--- a/src/pages/Main/MainPage.module.scss
+++ b/src/pages/Main/MainPage.module.scss
@@ -5,7 +5,7 @@
     flex-direction: column;
     justify-content: flex-start;
     width: 1440px;
-    height: 2867px;
+    height: 2730px;
     flex-shrink: 0;
     background: #FFF;
 }
@@ -13,4 +13,12 @@
 .upperBlocks {
     display: flex;
     justify-content: space-between;
+}
+
+
+.tariffCardSection {
+    display: flex;
+    justify-content: space-between;
+    margin-left: 60px;
+    margin-right: 60px;
 }
