--- a/src/pages/SearchPage/SearchTitleTextBlock/SearchTitleTextBlock.module.scss
+++ b/src/pages/SearchPage/SearchTitleTextBlock/SearchTitleTextBlock.module.scss
@@ -1,5 +1,6 @@
-// SecondTitleTextBlock.module.scss
+// SearchTitleTextBlock-01.module.scss
 .titleTextBlock {
+  width: 743px;
   color: #000;
   font-family: 'FerryBlack', sans-serif;
   font-size: 45px;
@@ -7,4 +8,7 @@
   font-weight: 900;
   line-height: normal;
   letter-spacing: 0.45px;
+  margin-left: 60px;
+  margin-top: 158px;
+  margin-bottom: 60px;
 }
