--- a/src/pages/SearchPage/SearchPageCharacters/SearchPageCharacters.module.scss
+++ b/src/pages/SearchPage/SearchPageCharacters/SearchPageCharacters.module.scss
@@ -1,10 +1,9 @@
 /* SearchPageCharacters/SearchPageCharacters.module.scss */
 
-.imgLoginPageCharacters {
+.imgSearchPageCharacters {
   flex-shrink: 0;
-  margin-top: 50px;
   width: 322px;
   height: 342px;
-  margin-bottom: 100px;
-  margin-left: 172px;
+  margin-left: 1020px;
+  margin-top: -385px;
 }
