--- a/src/components/TitleTextBlock/TitleTextBlock.module.scss
+++ b/src/components/TitleTextBlock/TitleTextBlock.module.scss
@@ -1,4 +1,4 @@
-// SecondTitleTextBlock.module.scss
+// TitleTextBlock.module.scss
 .titleTextBlock {
   color: #000;
   font-family: 'FerryBlack', sans-serif;
