--- a/src/pages/LoginPage/LoginForm/PasswordInput/PasswordInput.module.scss
+++ b/src/pages/LoginPage/LoginForm/PasswordInput/PasswordInput.module.scss
@@ -1,7 +1,11 @@
-// Input.module.scss
+// PasswordInput.module.scss
+
 .input {
   width: 379px;
   height: 43px;
+  margin-right: 25px;
+  margin-left: 25px;
+  margin-top: 15px;
   background: white;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
   border-radius: 5px;
