--- a/src/pages/LoginPage/LoginForm/LoginForm.module.scss
+++ b/src/pages/LoginPage/LoginForm/LoginForm.module.scss
@@ -4,12 +4,12 @@
     height: 100%;
     position: relative;
 
-    .overlay {
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        background: rgba(0, 0, 0, 0.5);
-    }
+    //.overlay {
+    //    width: 100%;
+    //    height: 100%;
+    //    position: absolute;
+    //    background: rgba(0, 0, 0, 0.5);
+    //}
 
     .contentContainer {
         width: 429px;
@@ -23,6 +23,24 @@
         position: relative;
     }
 
+    .boldLine {
+        width: 151px;
+        height: 2px;
+        background: #029491;
+        position: absolute;
+        margin-top: 52px;
+        margin-left: 25px;
+    }
+
+    .line {
+        width: 213px;
+        height: 2px;
+        background: #c7c7c7;
+        position: absolute;
+        margin-top: 52px;
+        margin-left: 188px;
+    }
+
     .enter {
         display: flex;
         position: relative;
@@ -32,21 +50,6 @@
         display: flex;
     }
 
-    .enter1Hr {
-        width: 151px;
-        height: 2px;
-        background: #029491;
-        border: none;
-        margin: 0;
-    }
-
-    .enter2Hr {
-        width: 151px;
-        height: 2px;
-        background: #029491;
-        border: none;
-        margin: 0;
-    }
 
     .enter1 {
         color: #029491;
@@ -57,6 +60,7 @@
         word-wrap: break-word;
         margin-left: 77px;
         margin-top: 25px;
+        position: relative; /* Added position relative for ::after to position absolutely */
     }
 
     .enter2 {
@@ -68,7 +72,9 @@
         word-wrap: break-word;
         margin-left: 77px;
         margin-top: 25px;
+        position: relative; /* Added position relative for ::after to position absolutely */
     }
+
 
     .input {
         width: 379px;
@@ -99,17 +105,26 @@
         word-wrap: break-word;
     }
 
-    .enterText {
+    .enterLoginText {
         color: #029491;
         font-family: 'Inter', sans-serif;
         font-size: 16px;
         font-weight: 400;
         letter-spacing: 0.32px;
         word-wrap: break-word;
-        margin-left: 28px;
+        margin-left: 25px;
+        margin-top: 40px;
     }
 
-
-
+    .enterPasswordText {
+        color: #029491;
+        font-family: 'Inter', sans-serif;
+        font-size: 16px;
+        font-weight: 400;
+        letter-spacing: 0.32px;
+        word-wrap: break-word;
+        margin-left: 25px;
+        margin-top: 20px;
+    }
 
 }
