--- a/src/pages/LoginPage/LoginForm/LoginForm.module.scss
+++ b/src/pages/LoginPage/LoginForm/LoginForm.module.scss
@@ -127,4 +127,48 @@
         margin-top: 20px;
     }
 
+    .recoverPass {
+        color: #5970ff;
+        font-family: 'Inter', sans-serif;
+        font-size: 14px;
+        font-weight: 400;
+        letter-spacing: 0.28px;
+        word-wrap: break-word;
+        margin-left: 25px;
+        margin-top: 40px;
+    }
+
+    .enterText {
+        color: #c7c7c7;
+        font-family: 'Inter', sans-serif;
+        font-size: 16px;
+        font-weight: 400;
+        letter-spacing: 0.32px;
+        word-wrap: break-word;
+        margin-left: 25px;
+        margin-bottom: 10px;
+    }
+
+    .socialIcons {
+        display: flex;
+    }
+
+    .google {
+        margin-left: 25px;
+        margin-bottom: 39px;
+    }
+
+
+    .facebook {
+        margin-left: 10px;
+        margin-bottom: 39px;
+    }
+
+
+    .yandex {
+        margin-left: 10px;
+        margin-bottom: 39px;
+
+    }
+
 }
