--- a/src/pages/SearchPage/SearchPage.module.scss
+++ b/src/pages/SearchPage/SearchPage.module.scss
@@ -2,9 +2,9 @@
 
 .searchPage {
   display: flex;
+  height: 100vh;
   //justify-content: space-between;
   width: 1440px;
-  height: 1122px;
   align-items: flex-start;
   flex-shrink: 0;
   background: #FFF;
