--- a/src/pages/SearchPage/SearchFormCard/SearchFormCard.module.scss
+++ b/src/pages/SearchPage/SearchFormCard/SearchFormCard.module.scss
@@ -6,12 +6,12 @@ $blue: #5970ff;
 $shadow: rgba(0, 0, 0, 0.20);
 $shadow-light: rgba(0, 0, 0, 0.05);
 
-.searchFormCard {
+.container {
   width: 100%;
   height: 100%;
   position: relative;
 
-  .container {
+  .leftBlock {
     width: 872px;
     height: 543px;
     left: 0;
@@ -22,7 +22,6 @@ $shadow-light: rgba(0, 0, 0, 0.05);
     border-radius: 10px;
     margin-top: 38px;
     margin-left: 53px;
-    display: flex;
     align-items: center;
 
     &__inn {
@@ -42,6 +41,145 @@ $shadow-light: rgba(0, 0, 0, 0.05);
         font-weight: 400;
         letter-spacing: 0.54px;
         word-wrap: break-word;
+        margin-top: 29px;
+      }
+
+      &__tonality {
+        left: 0;
+        top: 8px;
+        position: absolute;
+        color: $black;
+        font-size: 18px;
+        font-family: 'Inter', sans-serif;
+        font-weight: 400;
+        letter-spacing: 0.54px;
+        word-wrap: break-word;
+      }
+
+
+      &__input {
+        width: 242px;
+        height: 43px;
+        left: 0;
+        top: 50px;
+        position: absolute;
+        background: $white;
+        box-shadow: 0 0 20px $shadow-light;
+        border-radius: 5px;
+        border: 1px $gray-light solid;
+
+        &::placeholder {
+          color: $gray-medium;
+        }
+      }
+
+      &__hint {
+        left: 92px;
+        top: 63px;
+        position: absolute;
+        opacity: 0.40;
+        color: $gray-medium;
+        font-size: 14px;
+        font-family: 'Inter', sans-serif;
+        font-weight: 400;
+        letter-spacing: 0.42px;
+        word-wrap: break-word;
+      }
+
+      &__required {
+        left: 140px;
+        top: 0;
+        position: absolute;
+        color: $black;
+        font-size: 25px;
+        font-family: 'Inter', sans-serif;
+        font-weight: 400;
+        letter-spacing: 0.75px;
+        word-wrap: break-word;
+      }
+    }
+
+    &__tonality {
+      width: 242px;
+      height: 43px;
+      left: 44px;
+      top: 200px;
+      position: absolute;
+
+      &__label {
+        left: 0;
+        top: 8px;
+        position: absolute;
+        color: $black;
+        font-size: 18px;
+        font-family: 'Inter', sans-serif;
+        font-weight: 400;
+        letter-spacing: 0.54px;
+        word-wrap: break-word;
+        margin-top: 143px;
+      }
+
+
+      &__input {
+        width: 242px;
+        height: 43px;
+        left: 0;
+        top: 50px;
+        position: absolute;
+        background: $white;
+        box-shadow: 0 0 20px $shadow-light;
+        border-radius: 5px;
+        border: 1px $gray-light solid;
+
+        &::placeholder {
+          color: $gray-medium;
+        }
+      }
+
+      &__hint {
+        left: 92px;
+        top: 63px;
+        position: absolute;
+        opacity: 0.40;
+        color: $gray-medium;
+        font-size: 14px;
+        font-family: 'Inter', sans-serif;
+        font-weight: 400;
+        letter-spacing: 0.42px;
+        word-wrap: break-word;
+      }
+
+      &__required {
+        left: 140px;
+        top: 0;
+        position: absolute;
+        color: $black;
+        font-size: 25px;
+        font-family: 'Inter', sans-serif;
+        font-weight: 400;
+        letter-spacing: 0.75px;
+        word-wrap: break-word;
+      }
+    }
+
+    &__documentCount {
+      width: 242px;
+      height: 43px;
+      left: 44px;
+      top: 301px;
+      position: absolute;
+
+      &__label {
+        left: 0;
+        top: 8px;
+        position: absolute;
+        color: $black;
+        font-size: 18px;
+        font-family: 'Inter', sans-serif;
+        font-weight: 400;
+        letter-spacing: 0.54px;
+        word-wrap: break-word;
+        margin-top: 238px;
       }
 
       &__input {
@@ -85,6 +223,75 @@ $shadow-light: rgba(0, 0, 0, 0.05);
         word-wrap: break-word;
       }
     }
+
+    .leftBlockLabel {
+      left: 0;
+      top: 8px;
+      position: absolute;
+      color: $black;
+      font-size: 18px;
+      font-family: 'Inter', sans-serif;
+      font-weight: 400;
+      letter-spacing: 0.54px;
+      word-wrap: break-word;
+      margin-top: 418px;
+
+      &__label {
+        left: 0;
+        top: 8px;
+        position: absolute;
+        color: $black;
+        font-size: 18px;
+        font-family: 'Inter', sans-serif;
+        font-weight: 400;
+        letter-spacing: 0.54px;
+        word-wrap: break-word;
+      }
+   }
+
+
+      &__leftBlock__dateInputs {
+        width: 242px;
+        height: 43px;
+        left: 0;
+        top: 250px;
+        position: absolute;
+        background: $white;
+        box-shadow: 0 0 20px $shadow-light;
+        border-radius: 5px;
+        border: 1px $gray-light solid;
+
+        &::placeholder {
+          color: $gray-medium;
+        }
+      }
+
+      &__hint {
+        left: 92px;
+        top: 263px;
+        position: absolute;
+        opacity: 0.40;
+        color: $gray-medium;
+        font-size: 14px;
+        font-family: 'Inter', sans-serif;
+        font-weight: 400;
+        letter-spacing: 0.42px;
+        word-wrap: break-word;
+      }
+
+      &__required {
+        left: 140px;
+        top: 0;
+        position: absolute;
+        color: $black;
+        font-size: 25px;
+        font-family: 'Inter', sans-serif;
+        font-weight: 400;
+        letter-spacing: 0.75px;
+        word-wrap: break-word;
+      }
+    }
+
   }
 
   .searchButton {
@@ -106,4 +313,3 @@ $shadow-light: rgba(0, 0, 0, 0.05);
       word-wrap: break-word;
     }
   }
-}
