--- a/src/pages/SearchPage/SearchPage.module.scss
+++ b/src/pages/SearchPage/SearchPage.module.scss
@@ -5,16 +5,37 @@
   height: 100vh;
   //justify-content: space-between;
   width: 1440px;
-  align-items: flex-start;
-  flex-shrink: 0;
+  //align-items: flex-start;
+  //flex-shrink: 0;
   background: #FFF;
+}
+
+.leftColumn {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.rightColumn {
+  height: 100vh;
+  width: 100%;
+  margin-top: 115px;
+  display: flex;
+  flex-direction: column;
 }
 
 .document {
   width: 91px;
   height: 111px;
-  margin-left: 905px;
-  margin-bottom: 180px;
+  margin-left: 138px;
+}
+
+.folders {
+  width: 91px;
+  height: 111px;
+  margin-left: 390px;
+  margin-top: -85px;
 }
 
 .leftTextUnderTitleBlock {
@@ -22,7 +43,7 @@
   display: block;
   margin-top: 25px;
   min-width: 743px;
-  max-width: 950px;
+  //max-width: 950px;
   padding-left: 60px;
   position: relative;
   right: -5px;
