++ стили для хедер в зависимости от авторизации

--- a/src/components/AppHeader/UnauthenticatedUserPanel/UnauthenticatedUserPanel.module.scss
+++ b/src/components/AppHeader/UnauthenticatedUserPanel/UnauthenticatedUserPanel.module.scss
@@ -1,4 +1,4 @@
-// UserPanel.module.scss
+// UnauthenticatedUserPanel.module.scss
 
 .userPanel {
   position: relative;
@@ -8,12 +8,21 @@
   }
 
   .userInfoContainer {
-    width: 175px;
-    height: 63px;
+    width: 111px;
+    height: 32px;
     position: absolute;
     opacity: 0.30;
     background: #D9D9D9;
     border-radius: 5px;
+  }
+
+  .logoutText {
+    position: absolute;
+    font-size: 10px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
+    word-wrap: break-word;
+    cursor: pointer; /* Добавляем указатель мыши, чтобы пользователь понимал, что это интерактивный элемент */
   }
 
   .userInfoText {
