--- a/src/components/UI/Button/Button.module.scss
+++ b/src/components/UI/Button/Button.module.scss
@@ -1,11 +1,20 @@
 /* Button.module.css */
 
+//.button {
+//    width: 65px;
+//    height: 26px;
+//
+//    flex-shrink: 0;
+//
+//    border-radius: 5px;
+//    background: #7CE3E1;
+//}
+
 .button {
-    width: 65px;
-    height: 26px;
-
+    width: 335px;
+    height: 59px;
     flex-shrink: 0;
-
     border-radius: 5px;
-    background: #7CE3E1;
+    background: #5970FF;
+    margin-top: 70px;
 }
