--- a/src/components/AppHeader/UnauthenticatedUserPanel/UnauthenticatedUserPanel.module.scss
+++ b/src/components/AppHeader/UnauthenticatedUserPanel/UnauthenticatedUserPanel.module.scss
@@ -1,72 +1,21 @@
 // UnauthenticatedUserPanel.module.scss
 
-.userPanel {
-  position: relative;
+.unauthenticatedUserPanel {
+  display: flex;
+  align-items: center;
+}
 
-  .userPanelRect {
-    // Стили для userPanelRect
-  }
+.slash {
+  margin-right: 20px;
+  margin-left: 7px;
+}
 
-  .userInfoContainer {
-    width: 111px;
-    height: 32px;
-    position: absolute;
-    opacity: 0.30;
-    background: #D9D9D9;
+.button {
+    width: 65px;
+    height: 26px;
+    flex-shrink: 0;
+    margin-left: 11px;
+    margin-top: 0;
     border-radius: 5px;
-  }
-
-  .logoutText {
-    position: absolute;
-    font-size: 10px;
-    font-family: 'Inter', sans-serif;
-    font-weight: 400;
-    word-wrap: break-word;
-    cursor: pointer; /* Добавляем указатель мыши, чтобы пользователь понимал, что это интерактивный элемент */
-  }
-
-  .userInfoText {
-    position: absolute;
-    font-size: 14px;
-    font-family: 'Inter', sans-serif;
-    font-weight: 700;
-    word-wrap: break-word;
-  }
-
-  .usedCompaniesText {
-    top: 12px;
-    left: 140px;
-    color: black;
-  }
-
-  .companyLimitText {
-    top: 31px;
-    left: 140px;
-    color: #8AC540;
-  }
-
-  .infoText {
-    position: absolute;
-    opacity: 0.40;
-    font-size: 10px;
-    font-family: 'Inter', sans-serif;
-    font-weight: 400;
-    word-wrap: break-word;
-  }
-
-  .usedCompaniesInfo {
-    top: 14px;
-    left: 10px;
-    color: black;
-  }
-
-  .companyLimitInfo {
-    top: 33px;
-    left: 27px;
-    color: black;
-  }
-
-  .avatar {
-    // Стили для аватара
-  }
+    background: #7CE3E1;
 }
