--- a/src/components/AppHeader/AuthenticatedUserInfo/AuthenticatedUserInfo.module.scss
+++ b/src/components/AppHeader/AuthenticatedUserInfo/AuthenticatedUserInfo.module.scss
@@ -1,13 +1,106 @@
 // AuthenticatedUserInfo.module.scss
 
-
+/* Блок - пользовательская информация */
 .userInfo {
   display: flex;
   align-items: center;
 }
 
+/* Блок - панель пользователя */
+.userInfo__userPanel {
+  display: flex;
 
-.logoutText {
+  /* Элемент - прямоугольник панели */
+  .userInfo__userPanel-rect {
+    width: 165px;
+    height: 63px;
+    background: #D9D9D9;
+    border-radius: 5px;
+    margin-right: 20px;
+  }
+
+  /* Блок - контейнер информации о компании */
+  .userInfo__companyInfo {
+    display: flex;
+    flex-direction: column;
+
+    /* Элемент - фоновый прямоугольник */
+    .userInfo__companyInfo-background {
+      width: 175px;
+      height: 63px;
+      left: 0;
+      top: 0;
+      position: absolute;
+      opacity: 0.30;
+      background: #D9D9D9;
+      border-radius: 5px;
+    }
+
+    /* Элемент - использованные компании */
+    .userInfo__companyInfo-used {
+      left: 140px;
+      top: 12px;
+      position: absolute;
+      color: black;
+      font-size: 14px;
+      font-family: 'Inter', sans-serif;
+      font-weight: 700;
+      word-wrap: break-word;
+    }
+
+    /* Элемент - лимит компаний */
+    .userInfo__companyInfo-limit {
+      left: 140px;
+      top: 31px;
+      position: absolute;
+      color: #8AC540;
+      font-size: 14px;
+      font-family: 'Inter', sans-serif;
+      font-weight: 700;
+      word-wrap: break-word;
+    }
+
+    /* Элемент - текст для исп. компаний */
+    .userInfo__companyInfo-usedText {
+      left: 10px;
+      top: 14px;
+      position: absolute;
+      opacity: 0.40;
+      color: black;
+      font-size: 10px;
+      font-family: 'Inter', sans-serif;
+      font-weight: 400;
+      word-wrap: break-word;
+    }
+
+    /* Элемент - текст для лимита */
+    .userInfo__companyInfo-limitText {
+      left: 27px;
+      top: 33px;
+      position: absolute;
+      opacity: 0.40;
+      color: black;
+      font-size: 10px;
+      font-family: 'Inter', sans-serif;
+      font-weight: 400;
+      word-wrap: break-word;
+    }
+
+    /* Элемент - текст для использованных компаний */
+    .userInfo__companyInfoTextUsed {
+
+    }
+
+    /* Элемент - текст для лимита */
+    .userInfo__companyInfoTextLimit {
+
+    }
+  }
+
+}
+
+/* Блок - текст выхода */
+.userInfo__logoutText {
   color: black;
   opacity: 0.40;
   font-size: 10px;
@@ -18,11 +111,7 @@
   margin-right: 29px;
 }
 
-.userInfo {
-  display: flex;
-  align-items: center;
-}
-
-.avatar {
+/* Блок - аватар */
+.userInfo__avatar {
   // Стили для аватара
 }
