--- a/src/pages/SearchPage/SearchFormCard/CheckboxList/CheckboxList.module.scss
+++ b/src/pages/SearchPage/SearchFormCard/CheckboxList/CheckboxList.module.scss
@@ -12,6 +12,7 @@ $shadow-light: rgba(0, 0, 0, 0.05);
     label {
       input {
         margin-right: 8px;
+        margin-top: 29px;
       }
 
       &:hover {
