--- a/src/pages/ResultPage/ImageRightBlock/ImageRightBlock.module.scss
+++ b/src/pages/ResultPage/ImageRightBlock/ImageRightBlock.module.scss
@@ -1,19 +1,9 @@
 /* ResultPage/ImageRightBlock/ImageRightBlock.module.css */
 
 .imageRightBlock {
-    width: 629px;
-    height: 593px;
+    width: 533px;
+    height: 369px;
     position: relative;
     flex-shrink: 0;
-    margin-top: 120px;
-    margin-right: 98px;
-    margin-left: -38px;
+    padding: 25px 104px 30px 217px;
 }
-
-.imageRightBlock img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    padding-left: 18px;
-}
-
