--- a/src/pages/ResultPage/ResultPage.module.scss
+++ b/src/pages/ResultPage/ResultPage.module.scss
@@ -1,40 +1,12 @@
 /* ResultPage.module.scss */
 
 .resultPage {
-  display: flex;
-  //justify-content: space-between;
-  width: 1440px;
-  height: 1967px;
-  align-items: flex-start;
-  flex-shrink: 0;
   background: #FFF;
 
   .container {
     display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    width: 1440px;
-
-    .leftTextUnderTitleBlock {
-      width: 534px;
-      display: block;
-      margin-top: 25px;
-      min-width: 743px;
-      //max-width: 950px;
-      padding-left: 60px;
-      position: relative;
-      right: -5px;
-    }
-
-    .leftSmallText {
-      color: #000;
-      font-family: 'Inter', sans-serif;
-      font-size: 20px;
-      font-style: normal;
-      font-weight: 400;
-      line-height: normal;
-      letter-spacing: 0.2px;
-    }
+    padding: 0;
+    margin: 0;
 
   }
 }
