сбросил стили. переверстал ResultPage.jsx

--- a/src/pages/ResultPage/ImageRightBlock/ImageRightBlock.module.scss
+++ b/src/pages/ResultPage/ImageRightBlock/ImageRightBlock.module.scss
@@ -3,7 +3,8 @@
 .imageRightBlock {
     width: 533px;
     height: 369px;
-    position: relative;
-    flex-shrink: 0;
-    padding: 25px 104px 30px 217px;
+    //margin-top: 25px;
+    margin-left: 190px;
+    padding-top: 25px;
+    margin-bottom: 84px;
 }
