--- a/src/pages/ResultPage/ResultPage.module.scss
+++ b/src/pages/ResultPage/ResultPage.module.scss
@@ -1,14 +1,13 @@
 /* ResultPage.module.scss */
 
 .resultPage {
+  display: flex;
+  //justify-content: space-between;
+  //width: 1440px;
+  //height: auto;
+  align-items: flex-start;
+  flex-shrink: 0;
   background: #FFF;
-
-  .container {
-    display: flex;
-    padding: 0;
-    margin: 0;
-
-  }
 }
 
 
